--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <p>
         Escuela:Centro de Estudios Tecnológicos, Industriales y de Servicios No. 112. <br>
         Semestre:5A<br>
-        carrera: Porhgramación.<br>
+        carrera: Programación.<br>
         año: 2025<br>
-        Profesor:<br>
+        Profesor: Mena Chán Jorge Armando Jacinto<br>
         <br>
         integrantes:<br>
         Brito Mena<br>
