--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 </head>
 <style>
     body{
-        background: #0f0c29;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background: #606c88;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to top, #3f4c6b, #606c88);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to top, #3f4c6b, #606c88); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     }
     h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
-    color: red;
+    color: white;
     text-align: left;
     }
 
@@ -27,7 +27,7 @@
     p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
-    color: red;
+    color: white;
     text-align: left;
     font-size: large;
     }
@@ -62,7 +62,7 @@
         Brito Mena<br>
         Cen Qui<br>
         Mut Baas<br>
-        <br>
+        Cárdenas Adrián <br>
         <br>
     </p>
     </div>
